[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/MusiclandBaseRadioState.png" type="Texture" id=1]
[ext_resource path="res://Scripts/RadioGame.gd" type="Script" id=2]
[ext_resource path="res://assets/MusiclandRadioAPressed.png" type="Texture" id=3]
[ext_resource path="res://assets/MusiclandRadioCPressed.png" type="Texture" id=4]
[ext_resource path="res://assets/MusiclandRadioEPressed.png" type="Texture" id=5]
[ext_resource path="res://assets/MusiclandRadioGPressed.png" type="Texture" id=6]
[ext_resource path="res://assets/MusiclandRadioDPressed.png" type="Texture" id=7]
[ext_resource path="res://assets/MusiclandRadioBPressed.png" type="Texture" id=8]
[ext_resource path="res://assets/MusiclandRadioFPressed.png" type="Texture" id=9]
[ext_resource path="res://assets/MusiclandBackToHubButton.png" type="Texture" id=10]
[ext_resource path="res://assets/MusiclandBackToHubButtonHover.png" type="Texture" id=11]
[ext_resource path="res://assets/MusiclandBackToHubButtonClickMask.png" type="BitMap" id=12]

[node name="RadioGame" type="Node2D"]
script = ExtResource( 2 )

[node name="BaseRadioState" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RadioAPressed" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RadioBPressed" type="TextureRect" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RadioCPressed" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RadioDPressed" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RadioEPressed" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RadioFPressed" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RadioGPressed" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C_Collision" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="C_Collision"]
polygon = PoolVector2Array( 262.299, 453.622, 257.58, 546.121, 257.58, 582.932, 328.37, 582.932, 327.426, 548.009, 330.258, 508.366, 300.054, 508.366, 302.885, 453.622 )

[node name="D_Collision" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="D_Collision"]
position = Vector2( 45.8595, 0.00012207 )
scale = Vector2( 1.12175, 1 )
polygon = PoolVector2Array( 269.518, 454.567, 265.311, 508.368, 253.531, 509.312, 251.848, 548.011, 251.007, 583.878, 316.638, 583.878, 316.638, 548.954, 317.48, 509.312, 300.054, 508.366, 304.017, 453.623 )

[node name="E_Collision" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="E_Collision"]
position = Vector2( 45.8595, 0.00012207 )
scale = Vector2( 1.12175, 1 )
polygon = PoolVector2Array( 340.198, 455.511, 340.198, 509.312, 317.48, 510.256, 317.48, 582.934, 380.587, 581.99, 381.428, 454.567 )

[node name="F_Collision" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="F_Collision"]
position = Vector2( 45.8595, 0.00012207 )
scale = Vector2( 1.12175, 1 )
polygon = PoolVector2Array( 381.428, 454.567, 380.587, 581.99, 443.694, 581.046, 444.536, 509.312, 411.72, 508.368, 412.561, 454.567 )

[node name="G_Collision" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="G_Collision"]
position = Vector2( 129.865, -7.27596e-12 )
scale = Vector2( 1.12175, 1 )
polygon = PoolVector2Array( 378.063, 454.567, 378.904, 508.368, 370.49, 508.368, 370.49, 581.99, 436.121, 581.046, 435.28, 509.312, 413.403, 509.312, 412.561, 454.567 )

[node name="A_Collision" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="A_Collision"]
position = Vector2( 211.982, 0 )
scale = Vector2( 1.12175, 1 )
polygon = PoolVector2Array( 378.063, 454.567, 378.904, 508.368, 362.075, 508.368, 363.758, 582.934, 426.866, 581.99, 426.024, 510.256, 413.403, 509.312, 412.561, 454.567 )

[node name="B_Collision" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="B_Collision"]
position = Vector2( 285.604, 0 )
scale = Vector2( 1.12175, 1 )
polygon = PoolVector2Array( 387.318, 453.623, 387.318, 507.424, 362.075, 508.368, 363.758, 582.934, 426.866, 581.99, 426.024, 510.256, 423.5, 454.567 )

[node name="Piano" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Piano"]
polygon = PoolVector2Array( 3.21591, 0.874153, 1022.37, 0.874153, 1023.56, 599.045, 0.837524, 599.045, 0.837524, 10.3878, 261.274, 455.151, 255.328, 545.531, 255.328, 582.396, 765.498, 582.396, 765.498, 550.288, 758.362, 453.962, 719.119, 452.773, 720.308, 506.287, 678.685, 507.476, 675.118, 453.962, 637.063, 453.962, 638.252, 506.287, 593.063, 509.855, 593.063, 453.962, 553.819, 455.151, 553.819, 506.287, 507.44, 509.855, 508.629, 453.962, 428.952, 455.151, 426.574, 506.287, 383.762, 507.476, 386.141, 452.773, 346.897, 452.773, 344.518, 507.476, 299.328, 508.665, 304.085, 455.151, 262.463, 455.151 )

[node name="BackToHub" type="TextureButton" parent="."]
margin_top = -43.6108
margin_right = 1024.0
margin_bottom = 556.389
rect_scale = Vector2( 0.204737, 0.204737 )
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 11 )
texture_click_mask = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="C_Collision" to="." method="_on_C_Collision_mouse_entered"]
[connection signal="mouse_entered" from="D_Collision" to="." method="_on_D_Collision_mouse_entered"]
[connection signal="mouse_entered" from="E_Collision" to="." method="_on_E_Collision_mouse_entered"]
[connection signal="mouse_entered" from="F_Collision" to="." method="_on_F_Collision_mouse_entered"]
[connection signal="mouse_entered" from="G_Collision" to="." method="_on_G_Collision_mouse_entered"]
[connection signal="mouse_entered" from="A_Collision" to="." method="_on_A_Collision_mouse_entered"]
[connection signal="mouse_entered" from="B_Collision" to="." method="_on_B_Collision_mouse_entered"]
[connection signal="mouse_entered" from="Piano" to="." method="_on_Piano_mouse_entered"]
[connection signal="pressed" from="BackToHub" to="." method="_on_BackToHub_pressed"]
